--- a/css/style-5.css
+++ b/css/style-5.css
@@ -48,3 +48,15 @@ body {
         100% 50%, 100% 100%, 0% 100%);
     }
 }
+
+@media(max-width: 767px){
+    .container h2 {
+        font-size: 5em;
+    }
+}
+
+@media(max-width: 424px){
+    .container h2 {
+        font-size: 3em;
+    }
+}
